--- a/Home.html
+++ b/Home.html
@@ -22,26 +22,51 @@
 </head>
 
 <body>
+  <!-- Nav Bar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-    <a class="navbar-brand" href="#">Calum Lynch CV</a>
+    <a class="navbar-brand text-muted" href="#">Calum Lynch CV</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="#">Features</a>
-        <a class="nav-item nav-link" href="#">Pricing</a>
-        <a class="nav-item nav-link disabled" href="#">Disabled</a>
+        <a class="nav-item nav-link active text-muted" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link text-muted" href="#">Page 1</a>
+        <a class="nav-item nav-link text-muted" href="#">Page 2</a>
+        <a class="nav-item nav-link text-muted" href="#">Page 3</a>
       </div>
     </div>
   </nav>
 
-
+  <!-- Main Content -->
+<div class="w-85 p-3" style="background-color: #eee;" justify-content:centre>
   <div class="container-fluid">
-    <h1>Hello World</h1>
-    <h2>Further testing</h2>
+    <div class="row">
+      <div class="col-sm-8">
+        <div class="card">
+          <div class="card-body">
+            <h1>About Me </h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+<div class="card">
+  <div class="card-body">
+    <img src="https://lh3.googleusercontent.com/8ux4ppa7iyRXkgJw-B-dwMDc0OC9SPTfGeu2yIDzxcgtIIkko8dAhYGaMacTdBKPWcbX1Ey2k-Ofiyc-PP_ZlHHnYzA1RZ-EW6ybAhYA9tkn9nyLmxNE1M94he4gnKKr0w4o_UbaGiH7oya6aG9se6oh1dXQjZojY1TSaslZC9TKQ2KjwYcIIl_ZMLx1wOPYjGERi8NHdiRvn9d10CrQaELOFPPffkdp-_gLSr6-pAFOXFulzfC9VXcvRm9zGrZ69tjJKWjdk3a0U0p_Z57scnABknPTv6WlME3ovHUM-MNSQTpdKSEOhLR9OEUEhatyc3Rmh08QxTQPAR0t6WlmTwepsfN4Zjc8yIsHXrmRhDBZEpXiCIGnNFwqTIU9M54mwBpURqH0udIooN9MqhJlmVQqkea5S0nowvPy-91Z4hE94D-HIZNhhmjXtxCrEHsqAHkD1vUk2Uaws1-jx-xDEiA0RmRZhuE5psvKO0p0q_YrSSwq5V14lhDERewjkepmn5RdfwG50ltvXK4oZm_wNPFKEVJevYQJt7q5zSiVUdMLBse1T2_8v15z5-r2gzLtsA6SumkHmUlJRTwBmBK3SDq7caOGBR5OI68KXUXwq0PGdWTt7vTLUcmdFJborhMFNkZXQDkFOkVNB-htAQJEbA9A=w478-h636-no" class="img-fluid" alt="Responsive image">
+
   </div>
+
+</div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
 
 </body>
 
