--- a/Home.html
+++ b/Home.html
@@ -4,20 +4,23 @@
 <head>
   <meta charset="utf-8">
   <title>CV Home Page</title>
-  <!-- Latest compiled and minified CSS -->
+  <!-- CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
-  <!-- jQuery library -->
+  <!-- jQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
   <!-- Popper JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 
-  <!-- Latest compiled JavaScript -->
+  <!-- JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
+  <!-- Reactiveness -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <!-- Font Awsome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
 </head>
 
@@ -46,8 +49,13 @@
           <div class="card" style="background-color: #f8f8f8">
             <div class="col-sm-10">
               <div class="card-body">
-                <h1>About Me </h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+                <h1>About Calum Lynch </h1>
+                <p>I am a Maths student at the University of Dundee who is currently in their first year. I have worked as a CAD technician for a number of years at a steel fabricators and work as an outdoor instructor for Loch Insh Watersports. See my other pages on Education, Previous Work, and Outside Interests.</p>
+                <br>
+<h3>Contact Details</h3>
+<p><span class="contactType"><i class="fas fa-envelope mr-1"></i> Email:</span> c.lynch@dundee.ac.uk</p>
+<p><span class="contactType"><i class="fas fa-mobile-alt mr-1"></i> Phone:</span> 07795458857</p>
+
               </div>
             </div>
           </div>
