Made It Lok Nice

--- a/Home.html
+++ b/Home.html
@@ -50,11 +50,12 @@
             <div class="col-sm-10">
               <div class="card-body">
                 <h1>About Calum Lynch </h1>
-                <p>I am a Maths student at the University of Dundee who is currently in their first year. I have worked as a CAD technician for a number of years at a steel fabricators and work as an outdoor instructor for Loch Insh Watersports. See my other pages on Education, Previous Work, and Outside Interests.</p>
+                <p>I am a Maths student at the University of Dundee who is currently in their first year. I have worked as a CAD technician for a number of years at a steel fabricators and work as an outdoor instructor for Loch Insh Watersports. See
+                  my other pages on Education, Previous Work, and Outside Interests.</p>
                 <br>
-<h3>Contact Details</h3>
-<p><span class="contactType"><i class="fas fa-envelope mr-1"></i> Email:</span> c.lynch@dundee.ac.uk</p>
-<p><span class="contactType"><i class="fas fa-mobile-alt mr-1"></i> Phone:</span> 07795458857</p>
+                <h3>Contact Details</h3>
+                <p><span class="contactType"><i class="fas fa-envelope mr-1"></i> Email:</span> c.lynch@dundee.ac.uk</p>
+                <p><span class="contactType"><i class="fas fa-mobile-alt mr-1"></i> Phone:</span> 07795458857</p>
 
               </div>
             </div>
