Done most of the content

--- a/Other Intrests.html
+++ b/Other Intrests.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>CV Home Page</title>
+  <title>Other Interests</title>
   <!-- CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
@@ -50,48 +50,81 @@
             <div class="col-sm-10">
               <div class="card-body">
                 <h1>Other Interests</h1>
-                <p>I am a Maths student at the University of Dundee who is currently in their first year. I have worked as a CAD technician for a number of years at a steel fabricators and work as an outdoor instructor for Loch Insh Watersports. See
-                  my other pages on Education, Previous Work, and Outside Interests.</p>
+                <p>Outwith work and education I am predominantly interested in sports, camping, hiking and socializing.
+                </p>
                 <br>
-                <h3>Contact Details</h3>
-                <p><span class="contactType"><i class="fas fa-envelope mr-1"></i> Email:</span> c.lynch@dundee.ac.uk</p>
-                <p><span class="contactType"><i class="fas fa-mobile-alt mr-1"></i> Phone:</span> 07795458857</p>
-
+                <p>I enjoy dipping in and out of many different sports including, but not limited to; skiing, snowboarding, biathlon, sailing, squash, running, rugby, and climbing. With squash being the newest on this list and skiing being the
+                  favorite. </p>
+                <br>
+                <p>As for camping I will occasionally organise a camping, bivvying, or or bothy trip with friend where we like to just get away. Often this is combine with a fair amount of hiking and socializing and can be a great weekend. I picked
+                  up my love for tents through scouts and spent a lot of time volunteering with them, as well as completing my explorer belt out in Romania. </p>
               </div>
             </div>
           </div>
         </div>
+
+        <!-- Pictures -->
         <div class="col-sm-4">
-          <div class="card" style="background-color: #5e5e5e">
+          <div class="card" style="background-color: #383b53">
+            <!-- Slide Show -->
+            <div class="d-flex justify-content-center">
 
-            <img src="https://lh3.googleusercontent.com/8ux4ppa7iyRXkgJw-B-dwMDc0OC9SPTfGeu2yIDzxcgtIIkko8dAhYGaMacTdBKPWcbX1Ey2k-Ofiyc-PP_ZlHHnYzA1RZ-EW6ybAhYA9tkn9nyLmxNE1M94he4gnKKr0w4o_UbaGiH7oya6aG9se6oh1dXQjZojY1TSaslZC9TKQ2KjwYcIIl_ZMLx1wOPYjGERi8NHdiRvn9d10CrQaELOFPPffkdp-_gLSr6-pAFOXFulzfC9VXcvRm9zGrZ69tjJKWjdk3a0U0p_Z57scnABknPTv6WlME3ovHUM-MNSQTpdKSEOhLR9OEUEhatyc3Rmh08QxTQPAR0t6WlmTwepsfN4Zjc8yIsHXrmRhDBZEpXiCIGnNFwqTIU9M54mwBpURqH0udIooN9MqhJlmVQqkea5S0nowvPy-91Z4hE94D-HIZNhhmjXtxCrEHsqAHkD1vUk2Uaws1-jx-xDEiA0RmRZhuE5psvKO0p0q_YrSSwq5V14lhDERewjkepmn5RdfwG50ltvXK4oZm_wNPFKEVJevYQJt7q5zSiVUdMLBse1T2_8v15z5-r2gzLtsA6SumkHmUlJRTwBmBK3SDq7caOGBR5OI68KXUXwq0PGdWTt7vTLUcmdFJborhMFNkZXQDkFOkVNB-htAQJEbA9A=w478-h636-no"
-              class="img-fluid" alt="Responsive image">
-
-
+              <div id="Education" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="https://lh3.googleusercontent.com/WtSLTytbw5aw_qnl0BCWIdDLy0pLkr6aG27np7pn4C7ueCASP6Ow-2yBFX9zl58TSQ-zGQnRxOvpTLa2iTJNDZhW53isIv8noejI3Fauc6z4JnK5HMlganR4Ewl7Qrn9UVTDZyrUvGKbyxijfyrQOY5mqNWA57LhEk9N3mFgLS4VADDaPRrECmYaVPe6U5InhGLr173gWtKduw0oN6oitclyr20ELmzjEtbQYulhgruPsuBnOVa_Bq8UM21YsW-oHUyZoeukjtKZ76bDFQR1bCOhQpXSfFBJgekgLJE0NmZ4YFmNMQZRXHf87fTVofjBW14xZlH9cTE5tq9CedKYEuYJH_27MfVCzs6OnIZ6sg2Q7-CDlEZv6IR_LAfU8u9oXUa_lSl2JN8VtxhpA8iGdrsMmiD0X7bxW1PEGQGZ5Vs1U-KCn8pr2PVO332t-4_ilkZDkqZZE3p_iAIoQa1Aa1jd2vJftRFmva80alh2GKh09JoZdeJQV7Utmjg6lNL-R78Hnw7sby8WfSulMQNjSi4yh6j9taMw0687HXVgvFe1hFG5cMwwjwX8jiRtkIjuG9j69SKHuKnKmnZFbUzUAHfqInz76dAYq7ntV_3X1c5BwVphyO7l_8f2PDhUlxJmVlAWZYOGii_P7Xoi3TAtDZXI=w441-h588-no"
+                      alt="Sailing Boats">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="https://lh3.googleusercontent.com/9q4UdRL6oXi3YwM8Tl2a0CQ7vcMiqEsC81E89dwsleej6UZT6pvdS03oXpaw2WCEbLNNSUgWrMFEmvNvDRaRo8BlJ1AvEk3oBa0D8_02alV3Bpc8EYqkjMwiv4zkLVQ-ihmy8lM1joFRUYnCEaaMQMFKsQLh4n5eP2svxMFqv6QzHxNFmYNKV_ImEahqSvljQL1EV_Z1BnlzmQjmkp13rrO3e0OhkIHJzV5Wqp4Pb2cAQvo6ldDcid8DrPfVaWHs1ra89mcaiLiVLAE4exCGYkbngZji9N4ooM4nPSQYCkwmcxRHY7pJG0yc8mXmQA6zAme4lU4NTIOcPj5mLCVYocH8MRloxdu4DqLlidmQFAuJes-NzvWgD94rU7XeFqH_eV6cu-5ymKmx6NtOsOE-Uenb7anylshSuDIWRI53NaO3Dslr8qYuGvTmHp-jMsD_Ddzrok7kqOVU0dFsE7RxmrfjUfdSj3MqQ0ELC0WkNmuLZrfFyXHWmywMmcfgkIm0kCQ4EZkspYQpEcWJ8EfPUUPy1GAY_d3EiFJFUSoF7naQLxE6xshAnIWcRyp7hlHYfbXgr8kosxbqKTHwQRb4EdW0G68GwlAmY3VfSJEvAQYpXuHPvnYcLFulOxsLjgwqlHaV2qjc5CTKf2-RSe8Pegs9=w441-h588-no"
+                      alt="River">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="https://lh3.googleusercontent.com/Ev0Vm2L4hm5aHpFTXh7oL5Ji5z5Zo5ntvKoi6IGQrfQqTN7OKLpgGarfLXicPjKt6b51GvhvoGkFWVicgu0P0v7t381-JYLIHWzwEf2V8Pu5mu4oWJFCan_hQ0D_4upJStT2WUV4BD4YIUd8w96qPMnrPcQkgEMyFshb3ynnZOLrEMtX4OH30xbWMqPNBG963NyxaDdkBx6MDgZku4_V4L_MwmZP7e1yNFfWHPb_gOWLZ7xlO7tR-fUcyp05QapcZWRwo1zgMtHy1nEQcGTmaKbZX34iIoUe1rNa1Ap6t1KAlavFUMTw3OKcWFHCGqXvl3jaWq3XkFVT6xv5LiQh1kTjf1H2rEo-wb5y4VArvQkz-b6fsUGvXUwMkR2UX1f0g2zuWtEGgT9eCkUR9Q7RPeQzPR33q-I6KHZMl341RUnWtFIu-24AB41YD-Z6Zg49siGD6J7xNEdCK-B21sIB6Z3n2vtWFeeudbaFWr3aWVQnY3km957rrOARlRIZbAU4O1agmVcO39fAIwYMmlu0bg6ai9glJcW8B3w2h8LoA_93qt7szID8GrUPs-UZ8s0nJ6KP60iqaQtc026U-VlOAKvm9pc1Mrg1DZ_yEFdaan9hUh9AhBWyADKbecBa7kexoPhwA65zucWGdc45b19LmK6x=w441-h588-no"
+                      alt="Biking">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="https://lh3.googleusercontent.com/Wo5p_AqJ-qN2ot0ECd4GZ7J1mo7d1uJMmQRkmul26CIIFkZXE3Q2F6sasA9APik8lVyKH-8SDwByPZt7AI4K0uddE2x_u8lPfW0mLIL2oagfByWLf-cHHvGwvQc0E9xfT9s21O-SPKajQ71mCIKxBQ5YQl9yzv8dp_O3fNmCHco5fikGnEXX7nmfDOe6ujcQd1drMBMN0Br00btzzG4wKcxVk75t-LheP6jcimgSzllUtht1OYrMF8NTFmQ0KN6aRk2WBjirBE9K_dzMoxDsBPB_xsPVDhyUSRuT8Rz3IRXgff8w2NTMKJ9xawHfWq4b4dg7wEm38oIVfv3JusHmqUw9g4LKSNmnuLv-lLB54TsfiONwHoTfbCGyP_CGVm1EWfAAOXOfGRZS0gJHo6p4_eIhzvSVEFJHukju3h87s8u6kXdJ4eU2uAHNe59Pt5gXXTovNjijUskxAbsy1LbjZy5wUM9pKN_07ZHvCxXJrAJXCVb_UjrZHdaO9Hwlagg_RmNu6YJmcdmHobqOhQ5iLJYevU7W0dSGb_uFJLunbrGnf6GLOOj21KHVJ1l7uKrslAb93RvmcV9wO8-id3VqcQX2H5OCLe2-UL-aoouhm-dBeF89MVHRgdcew-n6yFQojbqk-aDrkRUI_2oFK7pvqutj=w441-h588-no"
+                      alt="Badly Cropped Biathlon">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="https://lh3.googleusercontent.com/FzCDFdLzDoAUlXJTbF24c9LZAhBturP3O48p1HrxPUL8L0VDWRlKZ4F0BJStRy7ubXpPIo-kGePlqo5y07T5KiYLaoN4DpY2ZD4CYSn_xlu7QLkYJ18HAzmt18PxW5k671k3b51r7WawFsaZjjsYMR19d8gGzbAqckJtNR3b1OoTtdF0tcps7yvvbVzajW0ZT2_KVilgVyiKM_T4E-_HKGISjPh4zSY1IQB3-yOe1MX57fBgUScofleyW24Nr5NWoeBNdA1LjvSQxOyD0KTKkPvdoZbFMi4S4QhbuBRwkA_cTuoiEBAI_mM38O__R-H3-L-tAwMSv5TUjQYCNk5JXp9GmjmyxC5SVdPHmijePw0ZgUyNYtgSQy6AGsx0V821p9KoCw2Ey5TqlP9OC-UdrhrxxOJkpWfFZBCOdF8_LM0cZP2DzgYnmlHJEZHMnLN7nmT4SwD-BkGniB44pE0neZlG00XaZJ9UwN8K1R7HwwPbPt8IH4cf8eIifUjJSdFRK4evJehdtMrqrk1xLzbA-UNx7UEzLS55qETkYWqt1S0rBRuDkHc-cg0PZwYC1OKrXhHjzZlQQr4GRLzX7eQ8yd63aNFGnuNiSUUBpglbQYNsl1pdxeryOSCPprnYuHlC-dE76ZJxRvwMOK689DOvx_84=w440-h588-no "
+                      alt="The Mountains">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="https://lh3.googleusercontent.com/hmP0QWs0OkBPXrLEzsPG2Bor3v8DSGo408sxYYVOrwSbPQIVBKoJ9756GFZq0OesUy_Zcl69Ybp3IfO19f9BFPc8NXfudmNbsKs7ia90O0hQ3rxacGGdp4IrjlCdj2-dvNiC0_a8NDzV0gMMt_kaq2QtuCmU7WDnvAXOYeTewM_WSUnCbhlz8GU20L3xTmRWsPab-PdyimRl_cgNCLm-I7MDFhb5yYMxpZx5WJF02IaU_XTocv55hv9dKoeyE74wzZ2dX1Qx1xjYJnsBczFZgzFLuQhL20HovcSb7glLWh3TovbxySMyHhdnooFFk0K5CQ9HoL-yTnkr3X4zv3BHWUaWgFwAwFC7zRPmIWMhMVnLOYqZkAZjZNtGoOmsN-8LDsqWlXW5RBdcEeElZ6woTsSmx8CsvcDA0Z-s5zwrX2402iVCWx_W2hBIXVhHlYfSwTTrAgXCd9yXjTiiJXW9HXV4CU-F63g4qKJkj9ePH6TptJWuhY-LOpJzJdgY_VATio1QbaUnTThxQQTzlv6HYrk0-TP6zv5tf2_74rQDzIer16tmDAouKOIBMU953UD9Reb5-xKodMgsJEl5hYqmYYq4zAg1ZRcHK_LtyFUManEdrv6ZptcqPNl9iV360c3NKQQCMUdnLlefV047ObD4PV3M=w441-h588-no"
+                      alt="Hiking With Friends">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="https://lh3.googleusercontent.com/Twn0vLDMWN1q_6bXNk27N1ScRZTPyyZ5uffXqqrXCpzKu8VyMWHLwVfIjdQGj3d0J6-s3h1W515-5aCKvYKh0Y88I1xskyaDxeyOjl99nL_HfuGaEgV1GGxyoRo_poVW6rkb1IaQVLSn_N3FQhNItwrBQgtGKt6OqxRagyq0OIZ_Q7h6bkx7xKdfNlSIThVEVmeUeb1-yx88VO1zRCkwSk7SxcgvV1zaAxFVW2lwyRdUvs_iSONf8Z2n4T6xzfldzKOXIUga0XD7p_qlj5iXfVqIq4k5MyxFVMjACdlQgUt4KZRaReNNwMEmUDD-9YL9KG4ABe0Z8GBFfkJZoWfPLdUzwPQ5V8gkHPo8YD8ER9xoXaUrinNNSwWjtT1KqpY4k-h9Jfxnc3veoIeJiX5eTEF-mqRxYc-jHAzOy1sK84cX6vkc9gfNaQ8OayvM54HUk4Aatgd9UXkEj8pHTWH8A7faOAUX3uYoNsGtnqFKJxMKDmf68TkWL6Yd9ZeoL5oluX0FDrROZcFeOdIm4Cyxz-2SkVdn3UnfWS6E_vuGe6Dqh7Qu6UcmNJPWfhmOiUr41rl0WpktASBmbRkxXObXe4qnalpNYvdBR4NdoTFKahJ4zENvQKoL5wPwftr45wt5o3JILM9kXS5gmGKwNE94mesG=w441-h588-no"
+                      alt="A Nice View">
+                  </div>
+                </div>
+              </div>
+            </div>
 
           </div>
         </div>
       </div>
     </div>
-  </div>
 
 
-  <!-- Further Nav -->
+    <!-- Further Nav -->
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <h5 class="text-secondary">External Links</h5>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="container">
-        <button type="button" class="btn"><a class="text-muted" href="https://www.facebook.com/">Facebook</a></button>
-        <button type="button" class="btn"><a class="text-muted" href="https://www.twitter.com/">Twitter </a></button>
-        <button type="button" class="btn"><a class="text-muted" href="https://gb.linkedin.com/">Linkdin </a></button>
-        <button type="button" class="btn"><a class="text-muted" href="https://www.myspace.com/">MySpace </a></button>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <h5 class="text-secondary">External Links</h5>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="container">
+          <button type="button" class="btn"><a class="text-muted" href="https://www.facebook.com/">Facebook</a></button>
+          <button type="button" class="btn"><a class="text-muted" href="https://www.twitter.com/">Twitter </a></button>
+          <button type="button" class="btn"><a class="text-muted" href="https://gb.linkedin.com/">Linkdin </a></button>
+          <button type="button" class="btn"><a class="text-muted" href="https://www.myspace.com/">MySpace </a></button>
+        </div>
       </div>
-    </div>
-    </div>
+  </div>
   </nav>
 
 
