--- a/Education.html
+++ b/Education.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>CV Education Page</title>
+  <title>Education</title>
   <!-- CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
@@ -73,12 +73,11 @@
                 <br>
                 <p>I am currently at the University of Dundee studying modules in A1 Maths (Algebra and Calculus), Pure Maths, and www Authoring.
                 </p>
-
-
               </div>
             </div>
           </div>
         </div>
+        <!-- Pictures -->
         <div class="col-sm-4">
           <div class="card" style="background-color: #383b53">
             <!-- Slide Show -->
@@ -103,7 +102,6 @@
             </div>
 
           </div>
-
         </div>
       </div>
     </div>
