--- a/Home.html
+++ b/Home.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>CV Home Page</title>
+  <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
@@ -61,6 +61,7 @@
             </div>
           </div>
         </div>
+        <!-- Pictures -->
         <div class="col-sm-4">
           <div class="card" style="background-color: #5e5e5e">
 
