--- a/Previous Jobs.html
+++ b/Previous Jobs.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>CV Previous Jobs Page</title>
+  <title>Previous Jobs</title>
   <!-- CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
@@ -50,24 +50,44 @@
             <div class="col-sm-10">
               <div class="card-body">
                 <h1>Previous Jobs </h1>
-                <p>I am a Maths student at the University of Dundee who is currently in their first year. I have worked as a CAD technician for a number of years at a steel fabricators and work as an outdoor instructor for Loch Insh Watersports. See
-                  my other pages on Education, Previous Work, and Outside Interests.</p>
+                <p>I am currently employed part time as a cad technician and steel erector at DMH Blacksmiths in Inverness. Within this I draw CAD models and design steel work to go to an engineer, track and ensure material quality, answer the
+                  phones, and work onsite installing fabricated steel. As this is a professional environment I talk well to clients, am good at keeping an organised workflow, and work well with the team. </p>
                 <br>
-                <h3>Contact Details</h3>
-                <p><span class="contactType"><i class="fas fa-envelope mr-1"></i> Email:</span> c.lynch@dundee.ac.uk</p>
-                <p><span class="contactType"><i class="fas fa-mobile-alt mr-1"></i> Phone:</span> 07795458857</p>
-
+                <p>In previous jobs I have worked as an outdoor instructor and in a kitchen preparing food.</p>
+                <br>
+                <p> As an instructor I taught archery, raft building, and stand up paddleboarding as well as often being the on duty safety boat for the loch. A lot of the clients we had were groups of children, schools, and families. My time as an
+                  instructor has taught me to work well with children, diffuse situations, and talk to customers engagingly.
+                </p>
+                <br>
+                <p>Within the kitchen I mostly prepared food and kept the workspace hygienic, as well as manning the till and serving food. This helped me to become good at working under high pressure as the kitchen was often time pressed, as well
+                  as continuing to be polite to angrier customers.</p>
               </div>
             </div>
           </div>
         </div>
+        <!--pictures -->
         <div class="col-sm-4">
-          <div class="card" style="background-color: #5e5e5e">
+          <div class="card" style="background-color: #383b53">
+            <!-- Slide Show -->
+            <div class="d-flex justify-content-center">
 
-            <img src="https://lh3.googleusercontent.com/8ux4ppa7iyRXkgJw-B-dwMDc0OC9SPTfGeu2yIDzxcgtIIkko8dAhYGaMacTdBKPWcbX1Ey2k-Ofiyc-PP_ZlHHnYzA1RZ-EW6ybAhYA9tkn9nyLmxNE1M94he4gnKKr0w4o_UbaGiH7oya6aG9se6oh1dXQjZojY1TSaslZC9TKQ2KjwYcIIl_ZMLx1wOPYjGERi8NHdiRvn9d10CrQaELOFPPffkdp-_gLSr6-pAFOXFulzfC9VXcvRm9zGrZ69tjJKWjdk3a0U0p_Z57scnABknPTv6WlME3ovHUM-MNSQTpdKSEOhLR9OEUEhatyc3Rmh08QxTQPAR0t6WlmTwepsfN4Zjc8yIsHXrmRhDBZEpXiCIGnNFwqTIU9M54mwBpURqH0udIooN9MqhJlmVQqkea5S0nowvPy-91Z4hE94D-HIZNhhmjXtxCrEHsqAHkD1vUk2Uaws1-jx-xDEiA0RmRZhuE5psvKO0p0q_YrSSwq5V14lhDERewjkepmn5RdfwG50ltvXK4oZm_wNPFKEVJevYQJt7q5zSiVUdMLBse1T2_8v15z5-r2gzLtsA6SumkHmUlJRTwBmBK3SDq7caOGBR5OI68KXUXwq0PGdWTt7vTLUcmdFJborhMFNkZXQDkFOkVNB-htAQJEbA9A=w478-h636-no"
-              class="img-fluid" alt="Responsive image">
-
-
+              <div id="Previous Jobs" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="https://lh3.googleusercontent.com/Ge_BchnnaeQ8B-l6vRcdGJFrUH8xXbgDOwTZc3cBYrhNXkTbb1t-SAALLajWzAxF28d07-6IHeq7gT3VKKEq9a8Kuj-e6fwrcAsGN7NIMUuE7CeuUCleAPhBFHvifqAyCkaP4FCJiad-1rxYeloARDQooyTLunDgqbLigGCtQMz8qInRek1g09VqYGW9PVc7S-jG_TTGlSP6zqLyvn3Nn-V4azT2Ka5Excx77e4KGjPR8Ol6DkITG9-ogeUBumHOEcN51EMQYAWiTlhBMt3W8Jh428ZvmwErPYj-C7V3Y_IGtdDgpCsT2IT-TDSoOZIh5Fsl-rETW6-FojBZiWmBc9mdzUCjoG2ljuT31cs_TEKCATafRorFFYNcgH1C85kFR51hVITgc_5WN8fkdKJ_hvMEvxd91LwXkdfR_5piHAPxMNXrMGQgSHt2-XPZxowYjBXpMZhWGgz-hl8c1DM3QayrCADNDgKV0UPaHsN3M-ApMZoyZ-wHSR11cZNuZZDdgpoPNXIgWz5onWl_coH7hwvg_rDSYSX-bfxzfE076u6_a61WfiBvzb4_E96jcLP3GtbbwdjLALmju8vDtZ91zOXqtwBL06EQCVsDn3JtWoEidc05eOemtF-qhQQlly7hTBOdIw3mNF9CYQ3cW-bxisO5=w441-h588-no"
+                      alt="Loch Insh">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="https://lh3.googleusercontent.com/ZeCAcqlOTxBwAi1-uz7heBP1fihOdh1YmTTBcX7mRJe2sfkKxKTr2D9-ehmw4EsEQ7SpMk5YXI51r1Zu534pqeeyjR6OxVqzuhm8Wa62mE-DJvP8VBA_NXKTU9Imoz5R8NH-1LWXqGFAOVJhnaF-FnfViBGgmabbxEnd7QncR-Jk5PumcjyGguMXoJxn8YMsGMepKX6CxSfWFDyOE4dPjrwQLvzEKo0KeCyTZITYCbowQ9iHcriEaRRbvG0XTPQ3O6dvY3MhLZYjXI7QSWvNK5DAl21ljDrVy-zc3khHHQTsfYNUmPbirJ5yEGIn08_DwYaNFQmi-aUgCMB3CCkJeX0Ln4HHOzin2d4LTIZikztaTmLT9cTBgPerdkEeHF4ghXfFbFk6A46_OlsozbgmjIHM7AMYHyc_bsAGvpWz7RzsWx_Y7u2TdOd0cmJLbTeyBvO1ZFdVM2TIrpPK7W6H8vWg0fgaMAFzInUIsiEbA9cpivm70Y6-iZvG6dslZwxKTgnW4jfZO5WGKXIjfkP-B2sOLwiig-qSdNdxQPOK8L74DbivPGHfe3740gn5eneiJGjIZ6YWCip1PxRBUOIklm2p1ajAXJjCYMcXEP7uhfAK8JDv_5Shs4CgLE9EPpnOonb7QJAFq5qPk-VN7AAIJRj8=w442-h588-no"
+                      alt="Blacksmiths">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="https://lh3.googleusercontent.com/NyJ1xxY7hKy3DYwIjol5lIxlgsNxbtDaUDO11C3k5H5ZwCRCyOApO-slfGu9rzTv-DDTtJC1B1tLvtemVQYBAVzU8xf2VWZJKEbFMIuLdOAFhbDyW4MMAZvw1c-8O1Bvy91mdmRTBPzXMpJJ2dhYz0G1y_Enhp8pZTj8L11dZLlSQKZgVwHGyk4-eAyVQZomYzkZQqruld9x4p_EIVrv7p1qz73FZB8MnrKxAmMCPMVEq0WJSZoE9gw2xQ3N4tH4MgS1cDai321SMncZtaH1TZXJzIJB9b_P_OrntqmrUtdwq_h66AW2FYPL7EcgrzNB-CWj6FW82gpEZXipB5FGLaOpLgRa1jKAm4BBd6o1BGK_313yyQR4qXxvzuBr3PcFJKIg_mBxBgultlzMDlWysTFaHFVpjTBPneRoHxIJdVwvOwzIhFIz2B7eWLpgC5UAaXfooKnFx7iL6IrKXL88N8kr5Ud3mmxYJmWw38jzni31xWLV758rjndl2AvH5y6fD6fWpKQM0JtHNZku5BR34M-Mj4HHkPDQot9qwsf64repWu6lApyKv03LEuBgoJEtMCaDAgN-THr3c49nLJ_6S_xZak81J1lBENtD7Btn69O6WdSkUW9hHx066xTN09waiVhqhgDDKazaP4mi6CTgB1Y5=w441-h588-no"
+                      alt="Outdoor Instructor">
+                  </div>
+                </div>
+              </div>
+            </div>
 
           </div>
         </div>
