--- a/Education.html
+++ b/Education.html
@@ -27,16 +27,16 @@
 <body>
   <!-- Nav Bar -->
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #161616">
-    <a class="navbar-brand text-light" href="#">Calum Lynch CV</a>
+    <a class="navbar-brand text-light" href="">Calum Lynch CV</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link text-muted" href="#">Home </a>
-        <a class="nav-item nav-link active text-muted" href="#">Education<span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link text-muted" href="#">Previous Work</a>
-        <a class="nav-item nav-link text-muted" href="#">Other Intrests</a>
+        <a class="nav-item nav-link text-muted" href="">Home </a>
+        <a class="nav-item nav-link active text-muted" href="Education">Education<span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link text-muted" href="Previous%20Jobs">Previous Work</a>
+        <a class="nav-item nav-link text-muted" href="Other%20Interests">Other Intrests</a>
       </div>
     </div>
   </nav>
