--- a/Previous Jobs.html
+++ b/Previous Jobs.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Previous Jobs</title>
+  <title>Previous Work</title>
   <!-- CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
@@ -27,16 +27,16 @@
 <body>
   <!-- Nav Bar -->
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #161616">
-    <a class="navbar-brand text-light" href="#">Calum Lynch CV</a>
+    <a class="navbar-brand text-light" href="">Calum Lynch CV</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link text-muted" href="#">Home </a>
-        <a class="nav-item nav-link text-muted" href="#">Education</a>
-        <a class="nav-item nav-link active text-muted" href="#">Previous Jobs<span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link text-muted" href="#">Other Interests</a>
+        <a class="nav-item nav-link text-muted" href="">Home </a>
+        <a class="nav-item nav-link text-muted" href="#Education">Education</a>
+        <a class="nav-item nav-link active text-muted" href="Previous%20Jobs">Previous Work<span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link text-muted" href="Other%20Interests">Other Interests</a>
       </div>
     </div>
   </nav>
