Fixed Education Link

--- a/Previous Jobs.html
+++ b/Previous Jobs.html
@@ -34,7 +34,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link text-muted" href="https://calumlynch.github.io/Authoring-Project/">Home </a>
-        <a class="nav-item nav-link text-muted" href="#Education">Education</a>
+        <a class="nav-item nav-link text-muted" href="Education">Education</a>
         <a class="nav-item nav-link active text-muted" href="Previous%20Jobs">Previous Work<span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link text-muted" href="Other%20Interests">Other Interests</a>
       </div>
