spellin error correction

--- a/Education.html
+++ b/Education.html
@@ -36,7 +36,7 @@
         <a class="nav-item nav-link text-muted" href="https://calumlynch.github.io/Authoring-Project/">Home </a>
         <a class="nav-item nav-link active text-muted" href="Education">Education<span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link text-muted" href="Previous%20Jobs">Previous Work</a>
-        <a class="nav-item nav-link text-muted" href="Other%20Interests">Other Intrests</a>
+        <a class="nav-item nav-link text-muted" href="Other%20Interests">Other Interests</a>
       </div>
     </div>
   </nav>
