--- a/Previous Jobs.html
+++ b/Previous Jobs.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Previous Work</title>
+
   <!-- CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
@@ -25,23 +26,34 @@
 </head>
 
 <body>
+
   <!-- Nav Bar -->
+
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #161616">
+
     <a class="navbar-brand text-light" href="https://calumlynch.github.io/Authoring-Project/">Calum Lynch CV</a>
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
+
         <a class="nav-item nav-link text-muted" href="https://calumlynch.github.io/Authoring-Project/">Home </a>
+
         <a class="nav-item nav-link text-muted" href="Education">Education</a>
+
         <a class="nav-item nav-link active text-muted" href="Previous%20Jobs">Previous Work<span class="sr-only">(current)</span></a>
+
         <a class="nav-item nav-link text-muted" href="Other%20Interests">Other Interests</a>
+
       </div>
     </div>
   </nav>
 
   <!-- Main Content -->
+
   <div class="w-85 p-3" style="background-color: #383b53;" justify-content:centre>
     <div class="container-fluid">
       <div class="row">
@@ -49,6 +61,7 @@
           <div class="card" style="background-color: #f8f8f8">
             <div class="col-sm-10">
               <div class="card-body">
+
                 <h1>Previous Jobs </h1>
                 <p>I am currently employed part time as a cad technician and steel erector at DMH Blacksmiths in Inverness. Within this I draw CAD models and design steel work to go to an engineer, track and ensure material quality, answer the
                   phones, and work onsite installing fabricated steel. As this is a professional environment I talk well to clients, am good at keeping an organised workflow, and work well with the team. </p>
@@ -61,14 +74,19 @@
                 <br>
                 <p>Within the kitchen I mostly prepared food and kept the workspace hygienic, as well as manning the till and serving food. This helped me to become good at working under high pressure as the kitchen was often time pressed, as well
                   as continuing to be polite to angrier customers.</p>
+
               </div>
             </div>
           </div>
         </div>
-        <!--pictures -->
+
+        <!--Pictures -->
+
         <div class="col-sm-4">
           <div class="card" style="background-color: #383b53">
+
             <!-- Slide Show -->
+
             <div class="d-flex justify-content-center">
 
               <div id="Previous Jobs" class="carousel slide" data-ride="carousel">
@@ -85,37 +103,40 @@
                     <img src="https://lh3.googleusercontent.com/NyJ1xxY7hKy3DYwIjol5lIxlgsNxbtDaUDO11C3k5H5ZwCRCyOApO-slfGu9rzTv-DDTtJC1B1tLvtemVQYBAVzU8xf2VWZJKEbFMIuLdOAFhbDyW4MMAZvw1c-8O1Bvy91mdmRTBPzXMpJJ2dhYz0G1y_Enhp8pZTj8L11dZLlSQKZgVwHGyk4-eAyVQZomYzkZQqruld9x4p_EIVrv7p1qz73FZB8MnrKxAmMCPMVEq0WJSZoE9gw2xQ3N4tH4MgS1cDai321SMncZtaH1TZXJzIJB9b_P_OrntqmrUtdwq_h66AW2FYPL7EcgrzNB-CWj6FW82gpEZXipB5FGLaOpLgRa1jKAm4BBd6o1BGK_313yyQR4qXxvzuBr3PcFJKIg_mBxBgultlzMDlWysTFaHFVpjTBPneRoHxIJdVwvOwzIhFIz2B7eWLpgC5UAaXfooKnFx7iL6IrKXL88N8kr5Ud3mmxYJmWw38jzni31xWLV758rjndl2AvH5y6fD6fWpKQM0JtHNZku5BR34M-Mj4HHkPDQot9qwsf64repWu6lApyKv03LEuBgoJEtMCaDAgN-THr3c49nLJ_6S_xZak81J1lBENtD7Btn69O6WdSkUW9hHx066xTN09waiVhqhgDDKazaP4mi6CTgB1Y5=w441-h588-no"
                       alt="Outdoor Instructor">
                   </div>
+
                 </div>
               </div>
             </div>
-
           </div>
         </div>
       </div>
     </div>
   </div>
 
-
   <!-- Further Nav -->
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
     <h5 class="text-secondary">External Links</h5>
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="container">
+
         <button type="button" class="btn"><a class="text-muted" href="https://www.facebook.com/">Facebook</a></button>
+
         <button type="button" class="btn"><a class="text-muted" href="https://www.twitter.com/">Twitter </a></button>
+
         <button type="button" class="btn"><a class="text-muted" href="https://gb.linkedin.com/">Linkdin </a></button>
+
         <button type="button" class="btn"><a class="text-muted" href="https://www.myspace.com/">MySpace </a></button>
+
       </div>
     </div>
-    </div>
   </nav>
-
-
-
 </body>
 
 </html>
