fixed font awsome icons

--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="container">
 
-        <button type="button" class="btn"><a class="text-muted" href="https://www.facebook.com/">Facebook</a></button>
+        <button type="button" class="btn"><a class="text-muted" href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a></button>
 
-        <button type="button" class="btn"><a class="text-muted" href="https://www.twitter.com/">Twitter </a></button>
+        <button type="button" class="btn"><a class="text-muted" href="https://www.twitter.com/"><i class="fab fa-twitter-square"></i></a></button>
 
-        <button type="button" class="btn"><a class="text-muted" href="https://gb.linkedin.com/">Linkdin </a></button>
+        <button type="button" class="btn"><a class="text-muted" href="https://gb.linkedin.com/"><i class="fab fa-linkedin"></i></a></button>
 
-        <button type="button" class="btn"><a class="text-muted" href="https://www.myspace.com/">MySpace </a></button>
+        <button type="button" class="btn"><a class="text-muted" href="https://www.reddit.com/"><i class="fab fa-reddit-square"></i></a></button>
 
       </div>
     </div>
