--- a/Other Interests.html
+++ b/Other Interests.html
@@ -29,7 +29,7 @@
 
   <!-- Nav Bar -->
 
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #161616">
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #161616">
 
     <a class="navbar-brand text-light" href="https://calumlynch.github.io/Authoring-Project/">Calum Lynch CV</a>
 
