--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
   <!-- Nav Bar -->
 
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #161616">
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #161616">
 
     <a class="navbar-brand text-light" href="https://calumlynch.github.io/Authoring-Project/">Calum Lynch CV</a>
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" >
       <span class="navbar-toggler-icon"></span>
     </button>
 
