Image not loading fix

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="col-sm-4">
           <div class="card" style="background-color: #5e5e5e">
 
-            <img src="https://lh3.googleusercontent.com/8ux4ppa7iyRXkgJw-B-dwMDc0OC9SPTfGeu2yIDzxcgtIIkko8dAhYGaMacTdBKPWcbX1Ey2k-Ofiyc-PP_ZlHHnYzA1RZ-EW6ybAhYA9tkn9nyLmxNE1M94he4gnKKr0w4o_UbaGiH7oya6aG9se6oh1dXQjZojY1TSaslZC9TKQ2KjwYcIIl_ZMLx1wOPYjGERi8NHdiRvn9d10CrQaELOFPPffkdp-_gLSr6-pAFOXFulzfC9VXcvRm9zGrZ69tjJKWjdk3a0U0p_Z57scnABknPTv6WlME3ovHUM-MNSQTpdKSEOhLR9OEUEhatyc3Rmh08QxTQPAR0t6WlmTwepsfN4Zjc8yIsHXrmRhDBZEpXiCIGnNFwqTIU9M54mwBpURqH0udIooN9MqhJlmVQqkea5S0nowvPy-91Z4hE94D-HIZNhhmjXtxCrEHsqAHkD1vUk2Uaws1-jx-xDEiA0RmRZhuE5psvKO0p0q_YrSSwq5V14lhDERewjkepmn5RdfwG50ltvXK4oZm_wNPFKEVJevYQJt7q5zSiVUdMLBse1T2_8v15z5-r2gzLtsA6SumkHmUlJRTwBmBK3SDq7caOGBR5OI68KXUXwq0PGdWTt7vTLUcmdFJborhMFNkZXQDkFOkVNB-htAQJEbA9A=w478-h636-no"
+            <img src="https://imgur.com/XfFrAWk"
               class="img-fluid" alt="Portrait">
 
           </div>
