--- a/Education.html
+++ b/Education.html
@@ -82,7 +82,7 @@
                   <li>Physics</li>
                 </ul>
                 <br>
-                <p>As well as a ______ in Execise and fitness leadership</p>
+                <p>As well as a SCQF Level 6 in Execise and fitness leadership</p>
                 <br>
                 <p>I am currently at the University of Dundee studying modules in A1 Maths (Algebra and Calculus), Pure Maths, and www Authoring.
                 </p>
