Hopefully fixed issue with images not loading for other people

--- a/Education.html
+++ b/Education.html
@@ -104,15 +104,15 @@
               <div id="Education" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="https://lh3.googleusercontent.com/QMR7Rjk1LmcJZBANAXZScRiKRqrvLLud1Gyod-60GHhhTPHB2m77Ce2SJlRhMHLz6e4kSQ6hkM7eJg2hrVFBUnmjFiZ3tDQm-J4eR7OVNzDbjarS9mimBxF4l-r7rCeBgMYKLXPqCFsHWhHciKR27Z11NWKcxn43rBN842Syg1F2Dkn5i6WEL0QtkTQ3CAiapRakfU5pyZGPpktRNnpJNkVKzx2HOGB3IC6Tkf4zSkZCFtAlqQlPcU-afihNbjNLLxtiC9D77UpRJq4EPq21PDVOTH0PBm-Fhp-mu4B5pgYHr0CuUJmDJINH6NRpmTZiqy-6lxKfCTM9cQcMIVKxTCMEv0XnwfQ2m0LRNl7ixlUQ1PO-4PvCeVaScwvqQ_e58u_VgmaC36GzU5LyS1oJ6naitmU5IJjrJQBISUFnf_ow_I_HIn-WUzVAELZdLx2T7ZxP0_WubYQC7-xF9Igh-614x4tb0y-nI4C0UkAHrNvOJtFgIDUYPOq4U4qEyOUB_7Niekaqf5OZQmwrAEItKA7g8yoC-6-2FeSsaQzFnzUbO1RBFft-TETm1PUl57akH1HIXTa43FpPkZCnaOO7RpGiE8TOgVuF9U3Oz2z_MDtjwHB2fnbkhEzAgWa7vqdNEmznfjTY3o0c8_swxCGMBlrx=w442-h588-no"
+                    <img src="kingussiehigh.jpg"
                       alt="Kingussie High School">
                   </div>
                   <div class="carousel-item">
-                    <img src="https://lh3.googleusercontent.com/yD7MBmxvCyJIS5CQRozvVNymwU5BMLlFC6qc2oKugnVoOJGlQO3QpinyEB4m2v3eqQ1Z7SM01fM_DAjwBTwRFiWmzmCTNVLYqlQ6EzkJS4nttgSsyIG16CHKQe23osJeCeJrDNyPERMY-64l4b814lYv2yjaBcpoAyfoTuEf3ZsvU6tGT90NcyITJZ9UQshEyZu_4p6U02eqvJbTPqnnQ6yUFjRISdBkWzjU_wLJOaUn8ecfqf71L0Sz-yP6D04ztFey4u77vFljhlVsZxHl2rPzh4Hu_UGK3lm6iWVdOPiQNn0mF0EeLx8qDO2kqxkRZk0uZupFW7mQpzXRXoxUHbCc6pqWvR0ZnNFzazsmKE7iYbtGgMF2ddRHBGK0OM4_3-StVxJlknJm5xk6m5gkP_gfE4g7TPTHcfzWxWGpVVHnNzIePLstUPPqMvM8Mhm2xM0J5c0jUC-kkvxlp7BfFOdDOsLBtE3uN8jmmi1LRl_FdxL-g-KbvY7ZcrsYQAHWJfnjl8zqLXcVUUxymg4zg0X5TQVAH3kPKqgBvoxLQKT7ofWV-FBRMlQ57NtfnlQphP7_BN3JIzRb13LcR69kjwiao8UdNc5-L3OARGKS1eGZDvrlhq3g4slr2zkZXDOHYiwYiNsSPx4BnWSINwRcWEZY=w442-h588-no"
+                    <img src="Maths.jpg"
                       alt="Maths">
                   </div>
                   <div class="carousel-item">
-                    <img src="https://lh3.googleusercontent.com/sI3twlrl9sSeUhQGvfAiFlRN-EYKpI0wrgW3neR986in6lcIAtGUI1os_4w00rot2IONNA3DbHxOpxA7iy3jQwe4dkLFVFs1qMlypRQS3kVXb5krpsPEto50vYOjjEFkPfeobxJo5MZzUVDiCpQrgcWU9qqkWgnHwN01Qyg-MWmq2hfNEp2PorAfQXjQWrG2LYwSjMJL9bCymE61TdzNz6ToIUwhCpKIFUtAsp2FgyGN5Lvj6Y3BOob4jy_CUljjXihRE1QMCsEsJMntenAfWW7dAlgFFzYodFmiaPlav5SNtKm90GYUdElEYRdpvTmuKCeOoTjtVFOJ0alLQNhy4JNzmOuK-6P4lhQYe8yWs1h3E8B-FXLgOdfZqZhMLcI08M3u96wK0GLjvBmU9nxcpqEdm5uk2iSbEjjfgutKkWAOUHJLLwMgA75513VhLiekjxuVP9VZDYe6gMhkJvIUVwIcviO3Y5RBSgNiEp2Ky2Rj5ZXoCb1erV7vshNOMF4qKLJo3jonlxA5I10Nl36jT4A4p7siqf4lGAJ4KdF__reOvZaNxmyopYyslVsuiigxlm34fq4yuEWuYlrFw9F1ppvbOKZkHJNEJ6GSZufl-IIbgXG2gC8u3U92NLjeJGmJY8XrghxbGDKZzIdkdP3Wv3vi=w437-h588-no"
+                    <img src="UoD-Badge.jpg"
                       alt="University of Dundee">
                   </div>
 
