--- a/Previous Jobs.html
+++ b/Previous Jobs.html
@@ -92,16 +92,16 @@
               <div id="Previous Jobs" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="https://lh3.googleusercontent.com/Ge_BchnnaeQ8B-l6vRcdGJFrUH8xXbgDOwTZc3cBYrhNXkTbb1t-SAALLajWzAxF28d07-6IHeq7gT3VKKEq9a8Kuj-e6fwrcAsGN7NIMUuE7CeuUCleAPhBFHvifqAyCkaP4FCJiad-1rxYeloARDQooyTLunDgqbLigGCtQMz8qInRek1g09VqYGW9PVc7S-jG_TTGlSP6zqLyvn3Nn-V4azT2Ka5Excx77e4KGjPR8Ol6DkITG9-ogeUBumHOEcN51EMQYAWiTlhBMt3W8Jh428ZvmwErPYj-C7V3Y_IGtdDgpCsT2IT-TDSoOZIh5Fsl-rETW6-FojBZiWmBc9mdzUCjoG2ljuT31cs_TEKCATafRorFFYNcgH1C85kFR51hVITgc_5WN8fkdKJ_hvMEvxd91LwXkdfR_5piHAPxMNXrMGQgSHt2-XPZxowYjBXpMZhWGgz-hl8c1DM3QayrCADNDgKV0UPaHsN3M-ApMZoyZ-wHSR11cZNuZZDdgpoPNXIgWz5onWl_coH7hwvg_rDSYSX-bfxzfE076u6_a61WfiBvzb4_E96jcLP3GtbbwdjLALmju8vDtZ91zOXqtwBL06EQCVsDn3JtWoEidc05eOemtF-qhQQlly7hTBOdIw3mNF9CYQ3cW-bxisO5=w441-h588-no"
+                    <img src="Loch-Insh.jpg"
                       alt="Loch Insh">
                   </div>
                   <div class="carousel-item">
-                    <img src="https://lh3.googleusercontent.com/ZeCAcqlOTxBwAi1-uz7heBP1fihOdh1YmTTBcX7mRJe2sfkKxKTr2D9-ehmw4EsEQ7SpMk5YXI51r1Zu534pqeeyjR6OxVqzuhm8Wa62mE-DJvP8VBA_NXKTU9Imoz5R8NH-1LWXqGFAOVJhnaF-FnfViBGgmabbxEnd7QncR-Jk5PumcjyGguMXoJxn8YMsGMepKX6CxSfWFDyOE4dPjrwQLvzEKo0KeCyTZITYCbowQ9iHcriEaRRbvG0XTPQ3O6dvY3MhLZYjXI7QSWvNK5DAl21ljDrVy-zc3khHHQTsfYNUmPbirJ5yEGIn08_DwYaNFQmi-aUgCMB3CCkJeX0Ln4HHOzin2d4LTIZikztaTmLT9cTBgPerdkEeHF4ghXfFbFk6A46_OlsozbgmjIHM7AMYHyc_bsAGvpWz7RzsWx_Y7u2TdOd0cmJLbTeyBvO1ZFdVM2TIrpPK7W6H8vWg0fgaMAFzInUIsiEbA9cpivm70Y6-iZvG6dslZwxKTgnW4jfZO5WGKXIjfkP-B2sOLwiig-qSdNdxQPOK8L74DbivPGHfe3740gn5eneiJGjIZ6YWCip1PxRBUOIklm2p1ajAXJjCYMcXEP7uhfAK8JDv_5Shs4CgLE9EPpnOonb7QJAFq5qPk-VN7AAIJRj8=w442-h588-no"
-                      alt="Blacksmiths">
+                    <img src="Steel-Stairs.jpg"
+                      alt="Steel Stairs">
                   </div>
                   <div class="carousel-item">
-                    <img src="https://lh3.googleusercontent.com/NyJ1xxY7hKy3DYwIjol5lIxlgsNxbtDaUDO11C3k5H5ZwCRCyOApO-slfGu9rzTv-DDTtJC1B1tLvtemVQYBAVzU8xf2VWZJKEbFMIuLdOAFhbDyW4MMAZvw1c-8O1Bvy91mdmRTBPzXMpJJ2dhYz0G1y_Enhp8pZTj8L11dZLlSQKZgVwHGyk4-eAyVQZomYzkZQqruld9x4p_EIVrv7p1qz73FZB8MnrKxAmMCPMVEq0WJSZoE9gw2xQ3N4tH4MgS1cDai321SMncZtaH1TZXJzIJB9b_P_OrntqmrUtdwq_h66AW2FYPL7EcgrzNB-CWj6FW82gpEZXipB5FGLaOpLgRa1jKAm4BBd6o1BGK_313yyQR4qXxvzuBr3PcFJKIg_mBxBgultlzMDlWysTFaHFVpjTBPneRoHxIJdVwvOwzIhFIz2B7eWLpgC5UAaXfooKnFx7iL6IrKXL88N8kr5Ud3mmxYJmWw38jzni31xWLV758rjndl2AvH5y6fD6fWpKQM0JtHNZku5BR34M-Mj4HHkPDQot9qwsf64repWu6lApyKv03LEuBgoJEtMCaDAgN-THr3c49nLJ_6S_xZak81J1lBENtD7Btn69O6WdSkUW9hHx066xTN09waiVhqhgDDKazaP4mi6CTgB1Y5=w441-h588-no"
-                      alt="Outdoor Instructor">
+                    <img src="SUP.jpg"
+                      alt="Day Supping">
                   </div>
 
                 </div>
