--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="col-sm-4">
           <div class="card" style="background-color: #5e5e5e">
 
-            <img src="https://imgur.com/XfFrAWk"
+            <img src="portrait.jpg"
               class="img-fluid" alt="Portrait">
 
           </div>
