--- a/Other Interests.html
+++ b/Other Interests.html
@@ -88,35 +88,35 @@
               <div id="Education" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="https://lh3.googleusercontent.com/WtSLTytbw5aw_qnl0BCWIdDLy0pLkr6aG27np7pn4C7ueCASP6Ow-2yBFX9zl58TSQ-zGQnRxOvpTLa2iTJNDZhW53isIv8noejI3Fauc6z4JnK5HMlganR4Ewl7Qrn9UVTDZyrUvGKbyxijfyrQOY5mqNWA57LhEk9N3mFgLS4VADDaPRrECmYaVPe6U5InhGLr173gWtKduw0oN6oitclyr20ELmzjEtbQYulhgruPsuBnOVa_Bq8UM21YsW-oHUyZoeukjtKZ76bDFQR1bCOhQpXSfFBJgekgLJE0NmZ4YFmNMQZRXHf87fTVofjBW14xZlH9cTE5tq9CedKYEuYJH_27MfVCzs6OnIZ6sg2Q7-CDlEZv6IR_LAfU8u9oXUa_lSl2JN8VtxhpA8iGdrsMmiD0X7bxW1PEGQGZ5Vs1U-KCn8pr2PVO332t-4_ilkZDkqZZE3p_iAIoQa1Aa1jd2vJftRFmva80alh2GKh09JoZdeJQV7Utmjg6lNL-R78Hnw7sby8WfSulMQNjSi4yh6j9taMw0687HXVgvFe1hFG5cMwwjwX8jiRtkIjuG9j69SKHuKnKmnZFbUzUAHfqInz76dAYq7ntV_3X1c5BwVphyO7l_8f2PDhUlxJmVlAWZYOGii_P7Xoi3TAtDZXI=w441-h588-no"
+                    <img src="Sailing-Boats.jpg"
                       alt="Sailing Boats">
                   </div>
                   <div class="carousel-item">
-                    <img src="https://lh3.googleusercontent.com/9q4UdRL6oXi3YwM8Tl2a0CQ7vcMiqEsC81E89dwsleej6UZT6pvdS03oXpaw2WCEbLNNSUgWrMFEmvNvDRaRo8BlJ1AvEk3oBa0D8_02alV3Bpc8EYqkjMwiv4zkLVQ-ihmy8lM1joFRUYnCEaaMQMFKsQLh4n5eP2svxMFqv6QzHxNFmYNKV_ImEahqSvljQL1EV_Z1BnlzmQjmkp13rrO3e0OhkIHJzV5Wqp4Pb2cAQvo6ldDcid8DrPfVaWHs1ra89mcaiLiVLAE4exCGYkbngZji9N4ooM4nPSQYCkwmcxRHY7pJG0yc8mXmQA6zAme4lU4NTIOcPj5mLCVYocH8MRloxdu4DqLlidmQFAuJes-NzvWgD94rU7XeFqH_eV6cu-5ymKmx6NtOsOE-Uenb7anylshSuDIWRI53NaO3Dslr8qYuGvTmHp-jMsD_Ddzrok7kqOVU0dFsE7RxmrfjUfdSj3MqQ0ELC0WkNmuLZrfFyXHWmywMmcfgkIm0kCQ4EZkspYQpEcWJ8EfPUUPy1GAY_d3EiFJFUSoF7naQLxE6xshAnIWcRyp7hlHYfbXgr8kosxbqKTHwQRb4EdW0G68GwlAmY3VfSJEvAQYpXuHPvnYcLFulOxsLjgwqlHaV2qjc5CTKf2-RSe8Pegs9=w441-h588-no"
+                    <img src="River.jpg"
                       alt="River">
                   </div>
                   <div class="carousel-item">
-                    <img src="https://lh3.googleusercontent.com/Ev0Vm2L4hm5aHpFTXh7oL5Ji5z5Zo5ntvKoi6IGQrfQqTN7OKLpgGarfLXicPjKt6b51GvhvoGkFWVicgu0P0v7t381-JYLIHWzwEf2V8Pu5mu4oWJFCan_hQ0D_4upJStT2WUV4BD4YIUd8w96qPMnrPcQkgEMyFshb3ynnZOLrEMtX4OH30xbWMqPNBG963NyxaDdkBx6MDgZku4_V4L_MwmZP7e1yNFfWHPb_gOWLZ7xlO7tR-fUcyp05QapcZWRwo1zgMtHy1nEQcGTmaKbZX34iIoUe1rNa1Ap6t1KAlavFUMTw3OKcWFHCGqXvl3jaWq3XkFVT6xv5LiQh1kTjf1H2rEo-wb5y4VArvQkz-b6fsUGvXUwMkR2UX1f0g2zuWtEGgT9eCkUR9Q7RPeQzPR33q-I6KHZMl341RUnWtFIu-24AB41YD-Z6Zg49siGD6J7xNEdCK-B21sIB6Z3n2vtWFeeudbaFWr3aWVQnY3km957rrOARlRIZbAU4O1agmVcO39fAIwYMmlu0bg6ai9glJcW8B3w2h8LoA_93qt7szID8GrUPs-UZ8s0nJ6KP60iqaQtc026U-VlOAKvm9pc1Mrg1DZ_yEFdaan9hUh9AhBWyADKbecBa7kexoPhwA65zucWGdc45b19LmK6x=w441-h588-no"
+                    <img src="bikes.jpg"
                       alt="Biking">
                   </div>
                   <div class="carousel-item">
-                    <img src="https://lh3.googleusercontent.com/Wo5p_AqJ-qN2ot0ECd4GZ7J1mo7d1uJMmQRkmul26CIIFkZXE3Q2F6sasA9APik8lVyKH-8SDwByPZt7AI4K0uddE2x_u8lPfW0mLIL2oagfByWLf-cHHvGwvQc0E9xfT9s21O-SPKajQ71mCIKxBQ5YQl9yzv8dp_O3fNmCHco5fikGnEXX7nmfDOe6ujcQd1drMBMN0Br00btzzG4wKcxVk75t-LheP6jcimgSzllUtht1OYrMF8NTFmQ0KN6aRk2WBjirBE9K_dzMoxDsBPB_xsPVDhyUSRuT8Rz3IRXgff8w2NTMKJ9xawHfWq4b4dg7wEm38oIVfv3JusHmqUw9g4LKSNmnuLv-lLB54TsfiONwHoTfbCGyP_CGVm1EWfAAOXOfGRZS0gJHo6p4_eIhzvSVEFJHukju3h87s8u6kXdJ4eU2uAHNe59Pt5gXXTovNjijUskxAbsy1LbjZy5wUM9pKN_07ZHvCxXJrAJXCVb_UjrZHdaO9Hwlagg_RmNu6YJmcdmHobqOhQ5iLJYevU7W0dSGb_uFJLunbrGnf6GLOOj21KHVJ1l7uKrslAb93RvmcV9wO8-id3VqcQX2H5OCLe2-UL-aoouhm-dBeF89MVHRgdcew-n6yFQojbqk-aDrkRUI_2oFK7pvqutj=w441-h588-no"
+                    <img src="biathlon.jpg"
                       alt="Badly Cropped Biathlon">
                   </div>
                   <div class="carousel-item">
-                    <img src="https://lh3.googleusercontent.com/FzCDFdLzDoAUlXJTbF24c9LZAhBturP3O48p1HrxPUL8L0VDWRlKZ4F0BJStRy7ubXpPIo-kGePlqo5y07T5KiYLaoN4DpY2ZD4CYSn_xlu7QLkYJ18HAzmt18PxW5k671k3b51r7WawFsaZjjsYMR19d8gGzbAqckJtNR3b1OoTtdF0tcps7yvvbVzajW0ZT2_KVilgVyiKM_T4E-_HKGISjPh4zSY1IQB3-yOe1MX57fBgUScofleyW24Nr5NWoeBNdA1LjvSQxOyD0KTKkPvdoZbFMi4S4QhbuBRwkA_cTuoiEBAI_mM38O__R-H3-L-tAwMSv5TUjQYCNk5JXp9GmjmyxC5SVdPHmijePw0ZgUyNYtgSQy6AGsx0V821p9KoCw2Ey5TqlP9OC-UdrhrxxOJkpWfFZBCOdF8_LM0cZP2DzgYnmlHJEZHMnLN7nmT4SwD-BkGniB44pE0neZlG00XaZJ9UwN8K1R7HwwPbPt8IH4cf8eIifUjJSdFRK4evJehdtMrqrk1xLzbA-UNx7UEzLS55qETkYWqt1S0rBRuDkHc-cg0PZwYC1OKrXhHjzZlQQr4GRLzX7eQ8yd63aNFGnuNiSUUBpglbQYNsl1pdxeryOSCPprnYuHlC-dE76ZJxRvwMOK689DOvx_84=w440-h588-no "
+                    <img src="mountains.jpg"
                       alt="The Mountains">
                   </div>
                   <div class="carousel-item">
-                    <img src="https://lh3.googleusercontent.com/hmP0QWs0OkBPXrLEzsPG2Bor3v8DSGo408sxYYVOrwSbPQIVBKoJ9756GFZq0OesUy_Zcl69Ybp3IfO19f9BFPc8NXfudmNbsKs7ia90O0hQ3rxacGGdp4IrjlCdj2-dvNiC0_a8NDzV0gMMt_kaq2QtuCmU7WDnvAXOYeTewM_WSUnCbhlz8GU20L3xTmRWsPab-PdyimRl_cgNCLm-I7MDFhb5yYMxpZx5WJF02IaU_XTocv55hv9dKoeyE74wzZ2dX1Qx1xjYJnsBczFZgzFLuQhL20HovcSb7glLWh3TovbxySMyHhdnooFFk0K5CQ9HoL-yTnkr3X4zv3BHWUaWgFwAwFC7zRPmIWMhMVnLOYqZkAZjZNtGoOmsN-8LDsqWlXW5RBdcEeElZ6woTsSmx8CsvcDA0Z-s5zwrX2402iVCWx_W2hBIXVhHlYfSwTTrAgXCd9yXjTiiJXW9HXV4CU-F63g4qKJkj9ePH6TptJWuhY-LOpJzJdgY_VATio1QbaUnTThxQQTzlv6HYrk0-TP6zv5tf2_74rQDzIer16tmDAouKOIBMU953UD9Reb5-xKodMgsJEl5hYqmYYq4zAg1ZRcHK_LtyFUManEdrv6ZptcqPNl9iV360c3NKQQCMUdnLlefV047ObD4PV3M=w441-h588-no"
+                    <img src="hiking.jpg"
                       alt="Hiking With Friends">
                   </div>
                   <div class="carousel-item">
-                    <img src="https://lh3.googleusercontent.com/Twn0vLDMWN1q_6bXNk27N1ScRZTPyyZ5uffXqqrXCpzKu8VyMWHLwVfIjdQGj3d0J6-s3h1W515-5aCKvYKh0Y88I1xskyaDxeyOjl99nL_HfuGaEgV1GGxyoRo_poVW6rkb1IaQVLSn_N3FQhNItwrBQgtGKt6OqxRagyq0OIZ_Q7h6bkx7xKdfNlSIThVEVmeUeb1-yx88VO1zRCkwSk7SxcgvV1zaAxFVW2lwyRdUvs_iSONf8Z2n4T6xzfldzKOXIUga0XD7p_qlj5iXfVqIq4k5MyxFVMjACdlQgUt4KZRaReNNwMEmUDD-9YL9KG4ABe0Z8GBFfkJZoWfPLdUzwPQ5V8gkHPo8YD8ER9xoXaUrinNNSwWjtT1KqpY4k-h9Jfxnc3veoIeJiX5eTEF-mqRxYc-jHAzOy1sK84cX6vkc9gfNaQ8OayvM54HUk4Aatgd9UXkEj8pHTWH8A7faOAUX3uYoNsGtnqFKJxMKDmf68TkWL6Yd9ZeoL5oluX0FDrROZcFeOdIm4Cyxz-2SkVdn3UnfWS6E_vuGe6Dqh7Qu6UcmNJPWfhmOiUr41rl0WpktASBmbRkxXObXe4qnalpNYvdBR4NdoTFKahJ4zENvQKoL5wPwftr45wt5o3JILM9kXS5gmGKwNE94mesG=w441-h588-no"
+                    <img src="Nice-view.jpg"
                       alt="A Nice View">
                   </div>
                   <div class="carousel-item">
-                    <img src="https://lh3.googleusercontent.com/qUciCQca-OOki9NKXxh3x-xvuB7oUH1g6p4c8YzfROnRQO8TLd265rGPtx9-Dp2qFsfdJ5ppZFHcK0aJr9DU87be3ccPj-KFDrTEc2IznV0BaKKxQkwzpUXuc3HVfg7L8ZQT3tpHOnC8ksTwszn1zIUyaxvHCdO73cwxATxReaYl-tUUpaW9XBWgaAQ_p9HOs2wXW9bZKv3Wl1hc79PtsDoJoeuUw8948rSm-UbjfVKJL-MOj7S0Jr9FUrDdbnCfqj9ixBdp0k9UwXregm0LfCO2j7OCA-SiP3cgc-HL5_7bXQYgOzCDkXkCgGNBU9BhhH-vfKBXerHq0T3MLCsTIdq0tPOjqqqjq-AV7qTycp7jeRYID-3kUN15oTqUjsrKrY50MljnB93XMzlADSWu_6xFIoNG9rui88IQKLufZHjQPFoIVWwQah5Vq5KFKTjq_pZgRtH-56FyFArw3XKu0csc5hP47ri__gF0_0r1z4pAtW_Wzr4S0vMbecCcJMGN7F2MH2izMGdqOiELbpV3oeJ1_O4DfXDP6gsaBtHVb6NSrBUxP0bfy7QVMVNGJ0AF8yduYGIvNbueca2kTU6ATWfEKl4OGl84wSQTrcm_Y7IG4xYTVOEh8DUCp9oAKKWt4uS1JvtQvBxj2C_g5EQaEN8J=w440-h588-no"
+                    <img src="Calum-GS.jpg"
                       alt="Skiing GS">
                   </div>
 
