--- a/Other Interests.html
+++ b/Other Interests.html
@@ -80,46 +80,40 @@
 
         <div class="col-sm-4">
           <div class="card" style="background-color: #383b53">
+            <div class="container-fluid">
 
-            <!-- Slide Show -->
+              <!-- Slide Show -->
 
-            <div class="d-flex justify-content-center">
+              <div class="d-flex justify-content-center">
 
-              <div id="Education" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="Sailing-Boats.jpg"
-                      alt="Sailing Boats">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="River.jpg"
-                      alt="River">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="bikes.jpg"
-                      alt="Biking">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="biathlon.jpg"
-                      alt="Badly Cropped Biathlon">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="mountains.jpg"
-                      alt="The Mountains">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="hiking.jpg"
-                      alt="Hiking With Friends">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="Nice-view.jpg"
-                      alt="A Nice View">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="Calum-GS.jpg"
-                      alt="Skiing GS">
-                  </div>
+                <div id="Education" class="carousel slide" data-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img class="d-block w-100" src="Sailing-Boats.jpg" alt="Sailing Boats">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="River.jpg" alt="River">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="bikes.jpg" alt="Biking">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="biathlon.jpg" alt="Badly Cropped Biathlon">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="mountains.jpg" alt="The Mountains">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="hiking.jpg" alt="Hiking With Friends">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="Nice-view.jpg" alt="A Nice View">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="Calum-GS.jpg" alt="Skiing GS">
+                    </div>
 
+                  </div>
                 </div>
               </div>
             </div>
