--- a/Education.html
+++ b/Education.html
@@ -104,15 +104,15 @@
               <div id="Education" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="kingussiehigh.jpg"
+                    <img class="d-block w-100" src="kingussiehigh.jpg"
                       alt="Kingussie High School">
                   </div>
                   <div class="carousel-item">
-                    <img src="Maths.jpg"
+                    <img class="d-block w-100" src="Maths.jpg"
                       alt="Maths">
                   </div>
                   <div class="carousel-item">
-                    <img src="UoD-Badge.jpg"
+                    <img class="d-block w-100" src="UoD-Badge.jpg"
                       alt="University of Dundee">
                   </div>
 
