--- a/Previous Jobs.html
+++ b/Previous Jobs.html
@@ -92,15 +92,15 @@
               <div id="Previous Jobs" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="Loch-Insh.jpg"
+                    <img class="d-block w-100" src="Loch-Insh.jpg"
                       alt="Loch Insh">
                   </div>
                   <div class="carousel-item">
-                    <img src="Steel-Stairs.jpg"
+                    <img class="d-block w-100" src="Steel-Stairs.jpg"
                       alt="Steel Stairs">
                   </div>
                   <div class="carousel-item">
-                    <img src="SUP.jpg"
+                    <img class="d-block w-100" src="SUP.jpg"
                       alt="Day Supping">
                   </div>
 
