fixed images links

--- a/Other Interests.html
+++ b/Other Interests.html
@@ -103,10 +103,10 @@
                       <img class="d-block w-100" src="mountains.jpg" alt="The Mountains">
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block w-100" src="hiking.jpg" alt="Hiking With Friends">
+                      <img class="d-block w-100" src="Hiking.jpg" alt="Hiking With Friends">
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block w-100" src="Nice-view.jpg" alt="A Nice View">
+                      <img class="d-block w-100" src="Nice-View.jpg" alt="A Nice View">
                     </div>
                     <div class="carousel-item">
                       <img class="d-block w-100" src="Calum-GS.jpg" alt="Skiing GS">
