Grammer and spelling

--- a/Education.html
+++ b/Education.html
@@ -65,7 +65,7 @@
                 <h1>My Education </h1>
                 <p>I went to Kingussie High school for the whole of my Secondary Education.</p>
                 <br>
-                <p>My Highers were in;</p>
+                <p>My Highers were in:</p>
                 <ul>
                   <li>Maths</li>
                   <li>English</li>
@@ -76,13 +76,12 @@
                   <li>Graphic Communication</li>
                 </ul>
                 <br>
-                <p>I also took Advanced Highers in;</p>
+                <p>I also took Advanced Highers in:</p>
                 <ul>
                   <li>Maths</li>
                   <li>Physics</li>
                 </ul>
-                <br>
-                <p>As well as a SCQF Level 6 in Execise and fitness leadership</p>
+                <p>As well as a SCQF Level 6 in Exercise and fitness leadership.</p>
                 <br>
                 <p>I am currently at the University of Dundee studying modules in A1 Maths (Algebra and Calculus), Pure Maths, and www Authoring.
                 </p>
