--- a/Other Interests.html
+++ b/Other Interests.html
@@ -65,7 +65,7 @@
                 <p>Outwith work and education I am predominantly interested in sports, camping, hiking and socializing.
                 </p>
                 <br>
-                <p>I enjoy dipping in and out of many different sports including, but not limited to; skiing, snowboarding, biathlon, sailing, squash, running, rugby, and climbing. With squash being the newest on this list and skiing being the
+                <p>I enjoy dipping in and out of many different sports including, but not limited to: skiing, snowboarding, biathlon, sailing, squash, running, rugby, and climbing. With squash being the newest on this list and skiing being the
                   favorite. </p>
                 <br>
                 <p>As for camping I will occasionally organise a camping, bivvying, or or bothy trip with friend where we like to just get away. Often this is combine with a fair amount of hiking and socializing and can be a great weekend. I picked
