--- a/Previous Jobs.html
+++ b/Previous Jobs.html
@@ -63,13 +63,11 @@
               <div class="card-body">
 
                 <h1>Previous Jobs </h1>
-                <p>I am currently employed part time as a cad technician and steel erector at DMH Blacksmiths in Inverness. Within this I draw CAD models and design steel work to go to an engineer, track and ensure material quality, answer the
-                  phones, and work onsite installing fabricated steel. As this is a professional environment I talk well to clients, am good at keeping an organised workflow, and work well with the team. </p>
+                <p>I am currently employed part time as a cad technician and steel erector at DMH Blacksmiths in Inverness. Within this I draw CAD models and design steel work to go to an engineer; track and ensure material quality; answer the phones; and work onsite installing fabricated steel. As this is a professional environment I talk well to clients, am good at keeping an organised workflow, and work well with the team. </p>
                 <br>
                 <p>In previous jobs I have worked as an outdoor instructor and in a kitchen preparing food.</p>
                 <br>
-                <p> As an instructor I taught archery, raft building, and stand up paddleboarding as well as often being the on duty safety boat for the loch. A lot of the clients we had were groups of children, schools, and families. My time as an
-                  instructor has taught me to work well with children, diffuse situations, and talk to customers engagingly.
+                <p> As an instructor I taught archery, raft building, and stand up paddleboarding as well as often being the on duty safety boat for the loch. A lot of the clients we had were groups of children, schools, and families. My time as an instructor has taught me to work well with children, diffuse situations, and talk to customers engagingly.
                 </p>
                 <br>
                 <p>Within the kitchen I mostly prepared food and kept the workspace hygienic, as well as manning the till and serving food. This helped me to become good at working under high pressure as the kitchen was often time pressed, as well
