--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
               <div class="card-body">
 
                 <h1>About Calum Lynch </h1>
-                <p>I am a Maths student at the University of Dundee who is currently in their first year. I work as a CAD technician, and have for a number of years, at a steel fabricators as well as working as an outdoor instructor for Loch Insh Watersports for summer. See
-                  my other pages on Education, Previous Work, and Outside Interests.</p>
+                <p>I am a Maths student at the University of Dundee who is currently in their first year. I work as a CAD technician, and have for a number of years, at a steel fabricators as well as working as an outdoor instructor for Loch Insh Watersports for summer. See my other pages on Education, Previous Work, and Outside Interests.</p>
                 <br>
                 <h3>Contact Details</h3>
                 <p><span class="contactType"><i class="fas fa-envelope mr-1"></i> Email:</span> c.lynch@dundee.ac.uk</p>
