fixed buttons nesting anchor issue brought up by w3c

--- a/Previous Jobs.html
+++ b/Previous Jobs.html
@@ -122,16 +122,27 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+
       <div class="container">
+        <div class="d-flex justify-content-end">
 
-        <button type="button" class="btn"><a class="text-muted" href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a></button>
+          <div class="d-inline-flex p-2">
+            <a class="text-muted" href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
+          </div>
 
-        <button type="button" class="btn"><a class="text-muted" href="https://www.twitter.com/"><i class="fab fa-twitter-square"></i></a></button>
+          <div class="d-inline-flex p-2">
+            <a class="text-muted" href="https://www.twitter.com/"><i class="fab fa-twitter-square"></i></a>
+          </div>
 
-        <button type="button" class="btn"><a class="text-muted" href="https://gb.linkedin.com/"><i class="fab fa-linkedin"></i></a></button>
+          <div class="d-inline-flex p-2">
+            <a class="text-muted" href="https://gb.linkedin.com/"><i class="fab fa-linkedin"></i></a>
+          </div>
 
-        <button type="button" class="btn"><a class="text-muted" href="https://www.reddit.com/"><i class="fab fa-reddit-square"></i></a></button>
+          <div class="d-inline-flex p-2">
+            <a class="text-muted" href="https://www.reddit.com/"><i class="fab fa-reddit-square"></i></a>
+          </div>
 
+        </div>
       </div>
     </div>
   </nav>
