--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <a class="navbar-brand text-light" href="https://calumlynch.github.io/Authoring-Project/">Calum Lynch CV</a>
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" >
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -63,7 +63,8 @@
               <div class="card-body">
 
                 <h1>About Calum Lynch </h1>
-                <p>I am a Maths student at the University of Dundee who is currently in their first year. I work as a CAD technician, and have for a number of years, at a steel fabricators as well as working as an outdoor instructor for Loch Insh Watersports for summer. See my other pages on Education, Previous Work, and Outside Interests.</p>
+                <p>I am a Maths student at the University of Dundee who is currently in their first year. I work as a CAD technician, and have for a number of years, at a steel fabricators as well as working as an outdoor instructor for Loch Insh
+                  Watersports for summer. See my other pages on Education, Previous Work, and Outside Interests.</p>
                 <br>
                 <h3>Contact Details</h3>
                 <p><span class="contactType"><i class="fas fa-envelope mr-1"></i> Email:</span> c.lynch@dundee.ac.uk</p>
@@ -79,8 +80,7 @@
         <div class="col-sm-4">
           <div class="card" style="background-color: #5e5e5e">
 
-            <img src="portrait.jpg"
-              class="img-fluid" alt="Portrait">
+            <img src="portrait.jpg" class="img-fluid" alt="Portrait">
 
           </div>
         </div>
@@ -99,18 +99,28 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+
       <div class="container">
+        <div class="d-flex justify-content-end">
 
-        <button type="button" class="btn"><a class="text-muted" href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a></button>
+          <div class="d-inline-flex p-2">
+            <a class="text-muted" href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
+          </div>
 
-        <button type="button" class="btn"><a class="text-muted" href="https://www.twitter.com/"><i class="fab fa-twitter-square"></i></a></button>
+          <div class="d-inline-flex p-2">
+            <a class="text-muted" href="https://www.twitter.com/"><i class="fab fa-twitter-square"></i></a>
+          </div>
 
-        <button type="button" class="btn"><a class="text-muted" href="https://gb.linkedin.com/"><i class="fab fa-linkedin"></i></a></button>
+          <div class="d-inline-flex p-2">
+            <a class="text-muted" href="https://gb.linkedin.com/"><i class="fab fa-linkedin"></i></a>
+          </div>
 
-        <button type="button" class="btn"><a class="text-muted" href="https://www.reddit.com/"><i class="fab fa-reddit-square"></i></a></button>
+          <div class="d-inline-flex p-2">
+            <a class="text-muted" href="https://www.reddit.com/"><i class="fab fa-reddit-square"></i></a>
+          </div>
 
+        </div>
       </div>
-    </div>
     </div>
   </nav>
 </body>
